--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
         "sqlite": "^5.1.1",
         "sqlite3": "^5.1.7"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.12.12",
         "concurrently": "^8.2.2",
         "nodemon": "^3.1.0",
