--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
         "build": "npx tsc",
         "dev": "concurrently \"nodemon index.js\" \"npx tsc --watch\"",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build-frontend": "npm run --prefix ../frontend build && rm -Rf dist && mv ../frontend/dist ."
+        "build-frontend": "npm run --prefix ../frontend build && rm -Rf dist && mv ../frontend/dist .",
+        "prettier": "prettier --check .",
+        "prettier:fix": "prettier --write ."
     },
     "keywords": [],
     "author": "",
@@ -24,8 +26,12 @@
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.12.12",
+        "@typescript-eslint/eslint-plugin": "^7.11.0",
+        "@typescript-eslint/parser": "^7.11.0",
         "concurrently": "^8.2.2",
+        "eslint": "^8.57.0",
         "nodemon": "^3.1.0",
+        "prettier": "^3.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
     }
