--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "prettier": "prettier --check ."
+        "prettier": "prettier --check .",
+        "prettier:fix": "prettier --write .",
+        "eslint": "eslint .",
+        "eslint:fix": "eslint --fix ."
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -28,7 +31,8 @@
         "@typescript-eslint/eslint-plugin": "^7.11.0",
         "@typescript-eslint/parser": "^7.11.0",
         "@vitejs/plugin-react": "^4.2.1",
-        "eslint": "^8.57.0",
+        "eslint": "^9.3.0",
+        "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
         "prettier": "^3.2.5",
