--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
         "dev": "concurrently \"nodemon index.js\" \"npx tsc --watch\"",
         "test": "echo \"Error: no test specified\" && exit 1",
         "build-frontend": "npm run --prefix ../frontend build && rm -Rf dist && mv ../frontend/dist .",
+        "lint": "eslint . --ext .ts --report-unused-disable-directives --max-warnings 0",
+        "lint:fix": "eslint . --ext .ts --fix",
         "prettier": "prettier --check .",
         "prettier:fix": "prettier --write ."
     },
@@ -32,6 +34,8 @@
         "@typescript-eslint/parser": "^7.11.0",
         "concurrently": "^8.2.2",
         "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
         "nodemon": "^3.1.0",
         "prettier": "^3.2.5",
         "ts-node": "^10.9.2",
