--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,10 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "lint:fix": "eslint . --ext .ts --fix",
         "preview": "vite preview",
         "prettier": "prettier --check .",
-        "prettier:fix": "prettier --write .",
-        "eslint": "eslint .",
-        "eslint:fix": "eslint --fix ."
+        "prettier:fix": "prettier --write ."
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -32,6 +31,7 @@
         "@typescript-eslint/parser": "^7.11.0",
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
